--- a/TrueDogStore/Views/Shared/_Layout.cshtml
+++ b/TrueDogStore/Views/Shared/_Layout.cshtml
@@ -97,14 +97,14 @@
             }
 
        
-        .custom-button {
+        .custom-buttonNavbar {
             background-color: #333;
             color: white !important;
             border: 2px solid white !important; 
             margin-top: -1px;
         }
 
-            .custom-button:hover {
+            .custom-buttonNavbar:hover {
                 background-color: #333 !important;
                 color: white !important; 
                 border: 2px solid white !important; 
@@ -145,7 +145,7 @@
                     <div class="input-group">
                         <input type="search" class="form-control rounded" name="search" id="searchInput" placeholder="Search for pet breeds" style="width: 370px;" value="@Context.Request.Query["search"]">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-primary custom-button" type="submit">
+                            <button class="btn btn-outline-primary custom-buttonNavbar" type="submit">
                                 <i class="bi bi-search"></i>
                             </button>
                         </div>
