--- a/TrueDogStore/Views/Account/DetailUserProfile.cshtml
+++ b/TrueDogStore/Views/Account/DetailUserProfile.cshtml
@@ -66,7 +66,7 @@
 
             .edit-profile-button:hover {
                 background-color: #0056b3;
-                color: #fff; /* Добавьте цвет текста при наведении */
+                color: #fff;
                 text-decoration: none;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             }
