--- a/TrueDogStore/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/TrueDogStore/Views/Account/ExternalLoginConfirmation.cshtml
@@ -7,8 +7,6 @@
 <div class="container">
     <h2>@ViewData["Title"]</h2>
     <p>Please enter your Email and Name to complete the registration process.</p>
-
-    <!-- Отображение иконки социальной сети -->
     @if (Model.SelectedLoginProvider == "Google")
     {
         <img src="https://res.cloudinary.com/dmmy4w8ev/image/upload/v1695467838/ul9ktafvbb8mm9dygg3j.png" alt="Google Icon" class="social-icon" />
@@ -18,7 +16,6 @@
         <img src="~/images/facebook-icon.png" alt="Facebook Icon" class="social-icon" />
     }
 
-    <!-- Форма для ввода Email и Name -->
     <form asp-controller="Account" asp-action ="ExternalLoginConfirmation" method="post" role="form" asp-routereturnurl="@ViewData["ReturnUrl"]">
         <div class="form-group">
             <label asp-for="Email"></label>
@@ -37,9 +34,8 @@
 </div>
 
 <style>
-    /* Стили для иконок социальных сетей */
     .social-icon {
-        max-width: 30px; /* Размер иконки можно настроить по вашему усмотрению */
+        max-width: 30px; 
         margin-right: 10px;
     }
 </style>
