--- a/TrueDogStore/Views/Account/Login.cshtml
+++ b/TrueDogStore/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
         
     }
     body {
-        background-image: url('/images/registerBg.jpg');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),url('/images/registerBg.jpg');
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -134,8 +134,6 @@
             background-color: #357ae8;
             color:white;
         }
-
-    /* Стили для логотипа Google */
     .google-logo {
         width: 33px;
         margin-right: 10px;
@@ -143,10 +141,21 @@
         padding: 5px; 
         margin-left: -10px;
         border-radius: 50%; 
+    }  
+        .form-check-input
+
+    {
+        transform: scale(1.3); 
     }
 
-</style>
-
+    .custom-button {
+    padding-left: 20px;
+    padding-top: 10px; 
+    padding-right: 20px; 
+    padding-bottom: 10px;
+    text-align: center;
+    }
+    </style>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -190,9 +199,14 @@
                             </div>
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
+                        <div class="form-check">
+                            <input asp-for="RememberMe" class="form-check-input" />
+                            <label asp-for="RememberMe" class="form-check-label" style="color: #fff; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); font-size: 18px;"></label>
+                        </div>
+
                         <div class="form-group text-center">
-                            <button class="btn btn-success" type="submit" style="margin-right: 15px;">Log in</button>
-                            <a class="btn btn-secondary" asp-controller="" asp-action="Index">Cancel</a>
+                            <button class="btn btn-success mt-4 mr-5  custom-button" type="submit">Log in</button>
+                            <a class="btn btn-secondary mt-4  custom-button" asp-controller="" asp-action="Index">Cancel</a>
                         </div>
                     </form>
                 </div>
